--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,11 +5,13 @@
 @import "variables";
 
 // Bootstrap
-@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap";
+@import "~bootstrap-vue";
 
 // DataTable
 @import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
 @import "~datatables.net-buttons-bs4/css/buttons.bootstrap4.css";
+// @import "~datatables.net-select-bs4/css/select.bootstrap4.css";
 @import "~datatables.net-responsive-bs4/css/responsive.bootstrap4.css";
 
 // Others
