Cleaning un-used stuff.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,13 +6,11 @@
 
 // Bootstrap
 @import "~bootstrap";
-@import "~bootstrap-vue";
-
-// DataTable
-@import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
-@import "~datatables.net-buttons-bs4/css/buttons.bootstrap4.css";
-// @import "~datatables.net-select-bs4/css/select.bootstrap4.css";
-@import "~datatables.net-responsive-bs4/css/responsive.bootstrap4.css";
 
 // Others
-@import "custom";
+.custom-center {
+    min-height: 80%;
+    min-height: 80vh;
+    display: flex;
+    align-items: center;
+}
