--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,10 @@
 // Bootstrap
 @import "~bootstrap";
 
+// Vuetify
+@import "~vuetify/dist/vuetify.min.css";
+@import "~@mdi/font/css/materialdesignicons.min.css";
+
 // Others
 .custom-center {
     min-height: 80%;
