--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,7 @@
 @import "variables";
 
 // Bootstrap
-@import "~bootstrap";
+// @import "~bootstrap";
 
 // Vuetify
 @import "~vuetify/dist/vuetify.min.css";
