--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 // Fonts
-// @import url('https://fonts.googleapis.com/css?family=Nunito');
+// @import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
 @import "variables";
@@ -9,4 +9,4 @@
 
 // Vuetify
 @import "~vuetify/dist/vuetify.min.css";
-@import "~@mdi/font/css/materialdesignicons.min.css";
+// @import "~@mdi/font/css/materialdesignicons.min.css";
